# xtermset

./: PKGBUILD  xtermset-0.5.2-1-x86_64.pkg.tar.zst
debian/: changelog  control  copyright  rules  source.lintian-overrides  watch
debian/patches/: series
xtermset-0.5.2/: 01-fix-wrong-use-of-hyphens-in-manpage.patch  02-array-bounds-overruns.patch  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  acconfig.h  config.h.in  config.status  configure  configure.in  mkinstalldirs  reconf
xtermset-0.5.2/CVS/: Entries  Repository
xtermset-0.5.2/doc/: Makefile.am  Makefile.in  terms.5  xtermset.1
xtermset-0.5.2/doc/CVS/: Entries  Repository  Root
xtermset-0.5.2/m4/: Makefile.am  Makefile.in
xtermset-0.5.2/m4/CVS/: Entries  Repository
xtermset-0.5.2/src/: Makefile.am  Makefile.in  arguments.c  term.c  terms  xtermset.c  xtermset.h
xtermset-0.5.2/src/CVS/: Entries  Repository
